--- a/app/src/main/res/layout/fragment_postitem.xml
+++ b/app/src/main/res/layout/fragment_postitem.xml
@@ -8,10 +8,6 @@
     card_view:cardElevation="@dimen/_8dp"
     card_view:cardUseCompatPadding="true">
 
-
-
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -20,11 +16,8 @@
         <ImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:contentDescription="@string/action_settings"
-            android:minHeight="@dimen/_290dp"
-            android:padding="5dp"
-            android:scaleType="centerCrop"
+            android:layout_height="@dimen/_150dp"
+            android:scaleType="fitXY"
             android:src="@drawable/noimage" />
 
         <TextView
@@ -104,9 +97,6 @@
 
 
     </LinearLayout>
-
-
-
 
 
 </android.support.v7.widget.CardView>
