--- a/app/src/main/res/layout/nav_header_dashboard.xml
+++ b/app/src/main/res/layout/nav_header_dashboard.xml
@@ -5,18 +5,25 @@
     android:layout_height="@dimen/nav_header_height"
     android:background="@drawable/headerbg"
     android:gravity="bottom"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
 
     <com.kredivation.aakhale.components.CircleImageView
         android:id="@+id/imageView"
-        android:layout_width="@dimen/_60dp"
+        android:layout_width="@dimen/_50dp"
         android:layout_height="@dimen/_50dp"
+        android:layout_gravity="left|center"
         android:layout_marginLeft="@dimen/_16dp"
-        android:layout_marginBottom="@dimen/_35dp"
-        android:contentDescription="@string/nav_header_desc"
-        android:paddingTop="@dimen/nav_header_vertical_spacing"
         app:srcCompat="@mipmap/ic_launcher_round" />
 
+    <TextView
+        android:id="@+id/name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:padding="@dimen/_5dp"
+        android:text=""
+        android:textColor="@color/white"
+        android:textSize="@dimen/_12dp" />
 </LinearLayout>
