--- a/app/src/main/res/layout/fragment_notification_list.xml
+++ b/app/src/main/res/layout/fragment_notification_list.xml
@@ -5,12 +5,28 @@
     android:layout_height="match_parent"
     tools:context=".fragments.NotificationListFragment">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/topTeamsList"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_5dp"
-        android:layout_weight="1"
-        android:dividerHeight="2dp" />
+        android:gravity="center"
+        android:orientation="vertical">
 
+        <android.support.v4.widget.SwipeRefreshLayout
+            android:id="@+id/swipe_container"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_weight="1">
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rvList"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:dividerHeight="1dp" />
+        </android.support.v4.widget.SwipeRefreshLayout>
+
+        <ProgressBar
+            android:id="@+id/loaddataProgress"
+            android:layout_width="@dimen/_40dp"
+            android:layout_height="@dimen/_40dp" />
+    </LinearLayout>
 </LinearLayout>
