--- a/app/src/main/res/layout/select_user_type.xml
+++ b/app/src/main/res/layout/select_user_type.xml
@@ -24,7 +24,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:padding="@dimen/_5dp"
-            android:text="SIGN UP"
+            android:text=""
             android:textColor="@color/white"
             android:textSize="@dimen/_14dp" />
 
